--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,7 @@ similarity_report_tversky.csv
 friedman_test_results.csv
 runtime_analysis_results.csv
 runtime_analysis_summary.csv
+mse_metrics.csv
 
 # Evaluation Report
 evaluation_report.csv
@@ -18,3 +19,5 @@ MCIC_Dataset/MCIC_Preprocessed/
 # Trashed Versions of MelDet Approach
 meldet_approach_v1.py
 meldet_approach_v3.py
+
+tempCodeRunnerFile.py
